overflow-x fix revert

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -55,7 +55,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    overflow-x: hidden;
 }
 
 .landing-text {
